# mraa

./: CMakeLists.txt
api/mraa/: gpio_chardev.h
docs/: 96boards.md
examples/: CMakeLists.txt  mraa-gpio_chardev.c
examples/c/: CMakeLists.txt  i2c.c  led.c  pwm.c  uart_advanced.c
examples/platform/: CMakeLists.txt
include/: mraa_internal_types.h
src/arm/: 96boards.c
src/gpio/: gpio_chardev.c
src/i2c/: i2c.c
